# tradingview

./: .gitignore  AGENTS.md  FUTURE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  MODULARIZATION_PLAN.md  README.md  SPEC.md  justfile  pyproject.toml  task.md
contrib/: tvcli-webhook.service
docs/: SMOKE.md
docs/plans/: 2026-06-11-phase-z-hardening-design.md  2026-06-12-freefloat-archive-design.md  2026-06-13-dashboard-visual-improvement.md  2026-06-13-freefloat-analytics-v2.md
scripts/: live_smoke.sh
src/tvcli/: __init__.py  __main__.py  cache.py  cli.py  config.py  doctor.py  errors.py  logging_utils.py  mcp.py  output.py  ratelimit.py
tests/: conftest.py
tests/fixtures/: screener_response.json  ta_response.json
tests/integration/: test_chart_network.py  test_screener_network.py  test_ta_network.py
tests/unit/: test_analyze_layer.py  test_auth_cli.py  test_auth_login.py  test_auth_session.py  test_auth_session_extra.py  test_cache.py  test_chart.py  test_chart_layer.py  test_cli.py  test_config.py  test_data_cli.py  test_data_float_archive_cli.py  test_db_cli.py  test_dev_cli.py  test_doctor.py  test_errors.py  test_float_dashboard.py  test_floatdash_app.py  test_floatdash_coverage_boost.py  test_floatdash_market_extra.py  test_floatdash_settings_alerts.py  test_freefloat.py  test_freefloat_archive.py  test_freefloat_archive_extra.py  test_freefloat_extra.py  test_indicators.py  test_logging_config_extra.py  test_main.py  test_mcp.py  test_ohlcv.py  test_ohlcv_cli.py  test_ohlcv_layer_extra.py  test_output.py  test_ratelimit.py  test_retry.py  (+13 more)
(+40 files in other folders)
