[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "tvcli"
version = "0.5.0"
description = "TradingView CLI toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "httpx>=0.27",
  "pydantic>=2.7",
  "websocket-client>=1.7",
]

[project.scripts]
tvcli = "tvcli.cli:app"

[project.optional-dependencies]
browser = ["playwright>=1.44"]
serve = ["fastapi>=0.110", "uvicorn>=0.29"]
market = ["tradingview-screener", "tradingview-ta"]
parquet = ["pandas>=2.2", "pyarrow>=16"]
dev = [
  "pytest>=9",
  "pytest-asyncio>=1.0",
  "respx>=0.21",
  "ruff>=0.4",
  "mypy>=1.10",
  "pytest-cov>=5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tvcli"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "network: tests that require internet access",
  "browser: tests that require Playwright/browser access",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
